# hyperdebug-firmware

./: .bazelrc  90-hyperdebug.rules  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  extensions.bzl
.github/workflows/: ci.yaml  create_release.yml
util/: BUILD.bazel  custom_version.sh  get_workspace_status.sh
