# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "hyperdebug-firmware",
    srcs = [
        "90-hyperdebug.rules",
        "//third_party/chromium:hyperdebug",
    ],
    extension = "tar.gz",
    package_dir = "hyperdebug",
)
