# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(name = "lowrisc_hyperdebug")

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "toolchains_arm_gnu", version = "1.0.2")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")
arm_toolchain.arm_none_eabi()
use_repo(arm_toolchain, "arm_none_eabi")

sources = use_extension("//:extensions.bzl", "sources")
use_repo(sources, "ec_src")
