# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name = "lowrisc_hyperdebug")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//third_party/crt:repos.bzl", "crt_repos")
crt_repos()
load("@crt//:repos.bzl", "crt_repos")
crt_repos()
load("@crt//:deps.bzl", "crt_deps")
crt_deps()

load("@crt//config:registration.bzl", "crt_register_toolchains")
crt_register_toolchains(
    arm = True,
)

load("//third_party/bazel:repos.bzl", "bazel_repos")
bazel_repos()
load("//third_party/bazel:deps.bzl", "bazel_deps")
bazel_deps()

load("//third_party/lowrisc:repos.bzl", "lowrisc_repos")
lowrisc_repos()
load("//third_party/lowrisc:deps.bzl", "lowrisc_deps")
lowrisc_deps()

load("//third_party/chromium:repos.bzl", "chromium_repos")
chromium_repos()
load("//third_party/chromium:deps.bzl", "chromium_deps")
chromium_deps()
