# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name = "lowrisc_hyperdebug")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//third_party/toolchains_arm_gnu:repos.bzl", "toolchains_arm_gnu_repos")
toolchains_arm_gnu_repos()
load("//third_party/toolchains_arm_gnu:deps.bzl", "toolchains_arm_gnu_deps")
toolchains_arm_gnu_deps()

register_toolchains("@arm_none_eabi//toolchain:all")

load("//third_party/bazel:repos.bzl", "bazel_repos")
bazel_repos()
load("//third_party/bazel:deps.bzl", "bazel_deps")
bazel_deps()

load("//third_party/chromium:repos.bzl", "chromium_repos")
chromium_repos()
load("//third_party/chromium:deps.bzl", "chromium_deps")
chromium_deps()
