# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

genrule(
    name = "custom_version",
    srcs = ["custom_version.sh"],
    outs = ["custom_version.h"],
    cmd = "$(location custom_version.sh) > $@",
    stamp = 1,
)
